# snake-neural-network

./: Cargo.toml
src/: main.rs  neural_network.rs  ring_buffer.rs  snake.rs
