[package]
name = "snake-rl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
env_logger = "0.10"
error-iter = "0.4"
game-loop = { version = "0.10", features = ["winit"] }
rand = "0.8.5"
log = "0.4"
pixels = "0.13.0"
winit = "0.28"
winit_input_helper = "0.14"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
